@@ -358,6 +358,7 @@ CREATE TABLE items (
 	lastlogsize	int(4) DEFAULT '0' NOT NULL,
 	logtimefmt	varchar(64) DEFAULT '' NOT NULL,
 	templateid	int(4) DEFAULT '0' NOT NULL,
+	valuemapid	int(4) DEFAULT '0' NOT NULL,
 
 	PRIMARY KEY	(itemid),
 	UNIQUE		shortname (hostid,key_),
