@@ -27,6 +27,10 @@
 #define	EVALUATE_FUNCTION_NORMAL	0
 #define	EVALUATE_FUNCTION_SUFFIX	1
 
+#define ZBX_FLAG_SEC			0
+#define ZBX_FLAG_VALUES			1
+
+
 int	evaluate_FUNCTION(char *value,DB_ITEM *item,char *function,char *parameter, int flag);
 int	evaluate_FUNCTION2(char *value,char *host,char *key,char *function,char *parameter);
 
