@@ -3,6 +3,8 @@ alter table items add	templateid	int(4) DEFAULT '0' NOT NULL;
 alter table triggers add	templateid	int(4) DEFAULT '0' NOT NULL;
 alter table graphs add	templateid	int(4) DEFAULT '0' NOT NULL;
 
+alter table items add	valuemapid	int(4) DEFAULT '0' NOT NULL;
+
 --
 -- Table structure for table 'valuemaps'
 --
